<resources>
    <string name="app_name">PhotographerBooking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="example_content">Example Content</string>
    <string name="image">image</string>
    <string name="sign_in">Sign In</string>
    <string name="username_email">Username or email</string>
    <string name="choose_username">Choose your username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forget_password"><u>Forget password?</u></string>
    <string name="remember_me">Remember me</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="already_account">Already have account? Login</string>
    <string name="forgot_password">Forget password</string>
    <string name="type_email">Type your email</string>
    <string name="send">Send</string>
    <string name="email_instruction">No worries! Enter your email and we will send you a reset.</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Hey, Welcome Back</string>
    <string name="let_get">Let\'s get</string>
    <string name="started">Started!</string>
    <string name="hello">Hello</string>
    <string name="beautiful">Beautiful,</string>
    <string name="sign_up_instruction">Enter your information below to sign up with us</string>
    <string name="space">\u0020</string>
    <string name="app_icon">Application icon</string>
    <string name="follow">Follow</string>
    <string name="experience_years">Years of experience</string>
    <string name="specialize">I specialize in</string>
    <string name="favorite_spot">My favorite spot to shoot in the city is…</string>
    <string name="pricing_information">Pricing Information</string>
    <string name="not_available">Not available</string>
    <string name="personal_shoot">Personal photo shoots starting at</string>
    <string name="commercial_shoot">Commercial photo shoots starting at</string>
    <string name="event_shoot">Event photography starting at</string>
    <string name="per_session">per session</string>
    <string name="per_day">per day</string>
    <string name="per_hour">per hour</string>
    <string name="specialization_1">Product Photography, Fashion,<br/>Business headshots, Portraits,<br/>Food<br/>Fitness Photos for Personal Trainers,<br/>Promotional Photos for Social media</string>
    <string name="spot_1">Wellington Point, The LightHouse Raby Bay</string>
    <string name="contact">Contact</string>
    <string name="booking">Booking</string>
    <string name="portfolio">Portfolio</string>
    <string name="speciality_album">Speciality Album</string>
    <string name="see_all_albums"><u>All albums</u> ></string>
    <string name="see_all_reviews"><u>All reviews</u> ></string>
    <string name="rating_and_reviews">Rating and Reviews</string>
    <string name="review_number">29 Reviews</string>
    <string name="rating_example">4.6</string>
</resources>